# basic-editor

./: basic-editor.cabal  flake.nix
src/: Main.hs
